dotnet-app/k8s-files/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apps
  labels:
    name: apps
    environment: local
